p5/style.css
html, body {
    font-family: 'Montserrat', sans-serif;
    background-color: #e1e1e1;
    color: black;
    margin: 0;
    overflow-x: hidden;
    scroll-behavior: smooth;
}

.dark-mode-body {
  background-color: #2c2c2c;
  color: white;
}

.dark-mode-card {
  background-color: #75634696;
  color: white;
}

#dark-button:hover {
  background-color: transparent;
}

canvas {
  display: block;
}

p {
  font-size: 15pt;
}

ul {
  list-style-type: none;
  margin: 0;
}

li {
  float: right;
  font-size: 25px;
  border-bottom: 2px solid #606060;
  padding: 10px;
  color: #454545;
}

li:hover {
  background-color: #9f9f9f;
}

li.second-child {
  margin-left: 15px;
  width: 3.9rem;
}

.dark-mode-lan-nav {
  color: #ccc;
  border-bottom: 2px solid #ccc;
}

.dark-mode-lan-nav:hover {
  background-color: #454545;
}

h1 {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 9rem;
}

/* -----------CAROUSEL STYLING------------ */

.newproj {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.slide-container{
  max-width: 1120px;
  width: 100%;
  padding: 40px 0;
}
.slide-content{
  margin: 0 40px;
  overflow: hidden;
  border-radius: 25px;
}
.card{
  border-radius: 25px;
  background-color: #FFF;
}

.dark-mode-card {
  background-color: #606060;
}
.image-content,
.card-content{
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px 14px;
}
.image-content{
  position: relative;
  row-gap: 5px;
  padding: 25px 0;
}
.overlay{
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background-color: #756346b0;
  border-radius: 25px 25px 0 25px;
}
.overlay::before,
.overlay::after{
  content: '';
  position: absolute;
  right: 0;
  bottom: -40px;
  height: 40px;
  width: 40px;
  background-color: #ccc;
}
.overlay::after{
  border-radius: 0 25px 0 0;
  background-color: #FFF;
}
.card-image{
  position: relative;
  height: 150px;
  width: 250px;
  background: #ccc;
  padding: 3px;
}
.card-image .card-img{
  height: 100%;
  width: 100%;
  object-fit: cover;
  border: 1px solid #75634696;
}
.name{
  font-size: 18px;
  font-weight: 500;
  color: #333;
}
.description{
  font-size: 14px;
  color: #707070;
  text-align: center;
}

.swiper-navBtn{
  color: #756346b0;
  transition: color 0.3s ease;
}
.swiper-navBtn:hover{
  color: #b9b9b9ab;
}
.swiper-navBtn::before,
.swiper-navBtn::after{
  font-size: 35px;
}
.swiper-button-next{
  right: 0;
}
.swiper-button-prev{
  left: 0;
}
.swiper-pagination-bullet{
  background-color: #b9b9b9ab;
  opacity: 1;
}
.swiper-pagination-bullet-active{
  background-color: #75634696;
}

@media screen and (max-width: 768px) {
  .slide-content{
    margin: 0 10px;
  }
  .swiper-navBtn{
    display: none;
  }
}

/* -----------OLD PROJECT CARD STYLING------------ */

.projects {
  display: flex;
  padding-top: 2rem;
  flex-direction: column;
  margin-left: 5%;
  margin-right: 5%;
}

.proj1 {
  justify-content: space-between;
  padding-left: 0.5%;
}

.proj2 {
  flex-direction: row-reverse;
  justify-content: space-between;
  padding-right: 0.5%;
  margin-left:auto
}

.proj1, .proj2 {
  display: flex;
  height: 20rem;
  width: 90%;
  background-color: #b9b9b9ab;
  font-size: 24pt;
  padding-bottom: 0.5%;
  margin-top: 6rem;
  border-radius: 10px;
}

.proj1title, .proj2title {
  font-size: 24pt;
  display: flex;
  padding: 0 1rem 0 1rem;
}

.inside-proj1 {
  display: flex;
  flex-direction: column;
  width: 75%;
}

.inside-proj2 {
  display: flex;
  flex-direction: column;
  align-items: end;
}

p.inside-proj {
  padding: 0 1rem 0 1rem;
  font-size: 18pt;
  line-height: 25pt;
  height: 9rem;
}

img.proj1img {
  border-radius: 10px;
  border: #676767;
  display: flex;
  height: 20.5rem;
}

img.proj1img:hover + .hide{
  filter: opacity(0.5);
  display: absolute;
}

h2 {
  text-decoration: underline;
  text-decoration-color: #75634696;
}

h3 {
  float: left;
  font-size:x-large;
  margin-top: 15px;
  border-bottom: 2px solid #75634696;
}

/* -----------LANDING PAGE STYLING------------ */

.lan-nav {
  background-color: #756346b0;
  /* background: rgb(36,36,36); */
  background: linear-gradient(180deg, #9f9f9f, #756346b0); 
  color: #ccc;
  display: flex;
  flex-direction: column;
  padding-top: 10px;
}

.navbar2 {
  border-style: solid;
  border-color: #578080;
  border: 15px;
  position: fixed;
  width: 100%;
  top: 0;
  right: 0;
  backdrop-filter: blur(5px);
  background-color: transparent;
  z-index:2;
  display: flex;
  flex-direction: row-reverse;
  font-size: 25px;
  color: #454545;
}

.navbar-li {
  border-bottom: 2px solid #606060;
  padding: 10px;
}

.navbar-li:hover {
  background-color: #9f9f9f;
}

.landing {
  padding-left: 2rem;
}

.greeting {
  justify-content: flex-start;
  font-size: 46pt;
}

.description {
  letter-spacing: 0.1rem;
  line-height: 1.75rem;
  font-size: 15pt;
  border: solid 2px #5ec4ff;
  padding: 20px;
  width: 50rem;
}

#wrapper {
  display: flex;
  align-content: flex-start;
  align-items: flex-end;
  justify-content: space-between;
}

#words {
	animation: pulse 12s;
  animation-iteration-count: infinite;
  animation-delay: 1s;
  font-size: 33pt;
  margin: 0
}

@keyframes pulse {
  0% {
    filter: opacity(1);
  }
  12% {
    filter: opacity(0);
  }
  25% {
    filter: opacity(1);
  }
  37% {
    filter: opacity(0);
  }
  50% {
    filter: opacity(1);
  }
  62% {
    filter: opacity(0);
  }
  75% {
    filter: opacity(1);
  }
  87% {
    filter: opacity(0);
  }
  100% {
    filter: opacity(1);
  }
}

#words:after {
	content: "Designer";
	animation: spin 12s linear;
  animation-iteration-count: infinite;
  animation-delay: 1s;

}

@keyframes spin {
  0% { content:"Designer"; }
  25% { content:"Developer"; }
  50% { content:"Consultant"; }
  75% { content:"Seattle Based"; }
  100% { content:"Designer"; }
}

.intro_p {
  height: 10rem;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

/* -----------ABOUT ME STYLING------------ */

#about {
  padding-bottom: 10%;
}

.about-me {
  display: flex;
  flex-direction: column;
  padding: 0 8%;
}

img.about-me {
  justify-content: flex-end;
  border-radius: 50%;
  margin-left: auto;
}

.about-desc {
  display: flex;
  flex-direction: row;
  font-size: 20pt;
  align-items: center;
  padding: 0;
  line-height: 40px
}

a {
  color: inherit;
  text-decoration: none;
  cursor:pointer;
}

hr {
  border-top: 1px solid #bbb;
  width: 90%;
  margin-top: 5rem;
}

.vert {
  margin: 50px;
  width: 0.1px;
  border-left: 1px solid #bbb;
}

.project-title {
  display: flex;
  justify-content: center; 
  align-items: center;
}

h1.project-title {
  padding-right: 2rem;
}

.projects-sub {
  display: flex;
  justify-content: center;
  padding-top: 0;
  padding-bottom: 3rem;
  margin-bottom: 0;
}

.projectsA {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  color: black;
  justify-content: center;
  justify-items: center;
  padding: 4rem 0;
}

/* -----------BUTTON STYLING------------ */

div.button {
  display: flex;
  flex-direction: row-reverse;
  height:fit-content;
  background-color: transparent;
}

#dark-button {
  box-shadow: none;
  border: none;
}

.button-6 {
  align-items: center;
  background-color: transparent;
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(47, 47, 47);
  cursor: pointer;
  display: inline-flex;
  font-family: 'Montserrat', sans-serif;
  font-size: 24px;
  font-weight: 600;
  justify-content: center;
  line-height: 1.25;
  margin: 0;
  min-height: 3rem;
  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
  position: relative;
  text-decoration: none;
  transition: all 250ms;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: baseline;
  width: 6rem;
}

.dark-mode-button-6 {
  color: white;
}

.button-6:hover {
  border: 2px; 
  border-color: rgba(0, 0, 0, 0.15);
  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
  background-color: #75634696;
  color: white;
  transform: translateY(-4px);

}


/* .button-6:active {
  background-color: #F0F0F1;
  border-color: rgba(0, 0, 0, 0.15);
  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
  color: rgba(0, 0, 0, 0.65);
  transform: translateY(0);
} */


button {
  height: 3rem;
  font-size: 20pt;
  background-color: #425595;
  color: #ccc;
}

p.code {
  width: 700px;
  background-color: cornsilk;
  font-size: 16px;
  flex-wrap: wrap;
  color: black;
}

textarea {
  min-width: 700px;
  min-height: 600px;
}

.row {
  display: flex;
  justify-content: space-around;
  flex-direction: row;
  align-items: center;
  padding: 0 10% 4rem 10%;
  width: 80%;
  resize: both;
}

.footer {
  position: relative;
  display: flex;
  justify-content: center;
}

.footer-spell, .footer-spell-active {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 75px;
  height: 75px;
  cursor: pointer;
}

.footer-spell-active {
  opacity: 0;
  transition: 0.4s ease-in-out;
}

.footer-spell-active:hover {
  opacity: 1;
}

div.contact-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

div.contact {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-bottom: 2rem;
}

div.slide {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: black;
  height: 100px;
  padding-bottom: 2rem;
}

.hide {
  display: none;
}

.dark-mode-hide {
  color: #ccc;
}

img.slide:hover + .hide {
  display: flex;
}

img.slide-dark:hover + .hide {
  display: flex;
}

img.slide, img.slide-dark {
  height: 100px;
  width: 175px;
}

img.slide {
  filter: grayscale(60%);
  filter: brightness(75%);
  transition: 0.2s ease-in-out;
}

img.slide-dark {
  filter: opacity(0.5);
  transition: 0.2s ease-in-out;
}

img.slide:hover, img.slide-dark:hover {
  filter: none
}

.skills-companies {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding: 0 4rem;
}

.skills {
  width: auto;
}

#msft {
  padding-bottom: 2rem;
  filter: brightness(0.8);
}

#companies {
  margin: 0;
}

.companies {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.companies-imgages {
  display: flex;
  align-items: center;
}

img.companies {
  display: flex;
  height: 150px;
  width: 300px;
  justify-content: center;
  padding-bottom: 4rem;
}

img.contact {
  height: 50px;
  width: 100px;
  transition: 0.2s ease-in-out;
}

img.contact:hover {
  transform: translateY(-5px);
}

/* media queries */

.menu {
  display: none;
}

.menu-items {
  display: flex;
  flex-direction: row-reverse;
}

@media screen and (max-width: 768px) { 
  .navbar2 {
    width:auto;
    background-color: transparent;
  }

  .navbar2-show {
    width: auto;
    flex-direction: column-reverse;
    align-items: flex-end;
  }  

  .navbar-li {
    display: none;
  }

  .navbar-li-show {
    display: flex;
    flex-direction: column;
  }

  .menu {
    display: flex;
    height: 35px;
    transition: 0.5s ease-in-out;
  }

  .menu-show {
    rotate: -90deg;
  }

  .menu-items-show {
    flex-direction: column-reverse;
  }

  #burgir-button {
    background-color: transparent;
    border: none;
    height: auto;
    filter: brightness(0.9);
  }

  #burgir-button:hover {
    filter: brightness(0.7);
  }

  img.slide, img.slide-dark {
    height: 60px;
    width: 110px;
  }

  .row {
    padding-bottom: 1rem;
  }

  .skills-companies {
    flex-direction: column;
  }

  .about-desc {
    flex-direction: column-reverse;
    font-size: 16pt;
  }

  .greeting {
    font-size: 2.8rem;
  }

  img.about-me {
    margin: 0;
  }

  #words {
    font-size: 28pt;
  }

  .landing {
    padding-left: 1rem;
  }
  
  .vert {
    width: 90%;
    margin: 10px;
  }

  img.companies {
    width: 200px;
    height: 100px;
  }
}

